service/tests/schemas/snapshots/categories/new_category_validation_rejects_invalid_parent_id@categories.snap
---
source: tests/schemas/categories.rs
expression: result
---
Err(
    "Validation error: {\"parent_id\":\"Field error\"}",
)
