service/tests/schemas/snapshots/categories/new_category_validation_rejects_long_description@categories.snap
---
source: tests/schemas/categories.rs
expression: result
---
Err(
    "Validation error: {\"description\":\"Description must be under 1000 characters\"}",
)
