service/tests/schemas/snapshots/categories/new_category_validation_rejects_long_name@categories.snap
---
source: tests/schemas/categories.rs
expression: result
---
Err(
    "Validation error: {\"name\":\"Name must be under 48 characters\"}",
)
