service/tests/schemas/snapshots/categories/new_category_validation_rejects_name_with_special_chars@categories.snap
---
source: tests/schemas/categories.rs
expression: result
---
Err(
    "Validation error: {\"name\":\"Only letters, numbers and hyphens can be used.\"}",
)
