service/tests/schemas/snapshots/categories/new_category_validation_rejects_short_name@categories.snap
---
source: tests/schemas/categories.rs
expression: result
---
Err(
    "Validation error: {\"name\":\"Name requires 2 characters\"}",
)
