service/tests/schemas/snapshots/categories/update_category_validation_rejects_empty_name@categories.snap
---
source: tests/schemas/categories.rs
expression: result
---
Err(
    "Validation error: {\"name\":\"Name is required\"}",
)
