service/tests/schemas/snapshots/categories/update_category_validation_rejects_invalid_image_link@categories.snap
---
source: tests/schemas/categories.rs
expression: result
---
Err(
    "Validation error: {\"image_link\":\"Field error\"}",
)
